...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/light_banner"
                android:weightSum="2"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_nfc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:text="@string/nfcsend"
                    android:textSize="@dimen/fontsize"
                    android:drawableTop="@drawable/ic_nfc_card"
                    />
                <Button
                    android:id="@+id/btn_qr"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:text="@string/qrsend"
                    android:textSize="@dimen/fontsize"
...
