<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/city_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightblue"
        android:orientation="vertical"
        android:weightSum="7"
        android:padding="@dimen/padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="@dimen/padding">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding"
                android:drawableTop="@drawable/ic_qr_code"
                android:textSize="@dimen/heading"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:id="@+id/gen_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
